[gd_scene load_steps=34 format=2]

[ext_resource path="res://big_chicken2.png" type="Texture" id=1]
[ext_resource path="res://big_chicken4.png" type="Texture" id=2]
[ext_resource path="res://big_chicken3.png" type="Texture" id=3]
[ext_resource path="res://big_chicken1.png" type="Texture" id=4]
[ext_resource path="res://big_chicken5.png" type="Texture" id=5]
[ext_resource path="res://big_chicken6.png" type="Texture" id=6]
[ext_resource path="res://big_chicken7.png" type="Texture" id=7]
[ext_resource path="res://big_chicken8.png" type="Texture" id=8]
[ext_resource path="res://BigMob.gd" type="Script" id=9]
[ext_resource path="res://healthbar.png" type="Texture" id=10]
[ext_resource path="res://healthbar_bg.png" type="Texture" id=11]
[ext_resource path="res://big_mob_hit.wav" type="AudioStream" id=12]
[ext_resource path="res://big_chicken_grow4.png" type="Texture" id=13]
[ext_resource path="res://big_chicken_grow3.png" type="Texture" id=14]
[ext_resource path="res://big_chicken_grow1.png" type="Texture" id=15]
[ext_resource path="res://big_chicken_grow2.png" type="Texture" id=16]
[ext_resource path="res://big_mob_grow.wav" type="AudioStream" id=17]
[ext_resource path="res://big_chicken_idle.png" type="Texture" id=18]
[ext_resource path="res://big_chicken_death9.png" type="Texture" id=19]
[ext_resource path="res://big_chicken_death8.png" type="Texture" id=20]
[ext_resource path="res://big_chicken_death5.png" type="Texture" id=21]
[ext_resource path="res://big_chicken_death2.png" type="Texture" id=22]
[ext_resource path="res://big_chicken_death3.png" type="Texture" id=23]
[ext_resource path="res://big_chicken_death4.png" type="Texture" id=24]
[ext_resource path="res://big_chicken_death6.png" type="Texture" id=25]
[ext_resource path="res://big_chicken_death7.png" type="Texture" id=26]
[ext_resource path="res://big_chicken_death1.png" type="Texture" id=27]
[ext_resource path="res://Explosion.tscn" type="PackedScene" id=28]
[ext_resource path="res://big_chicken_dance1.png" type="Texture" id=29]
[ext_resource path="res://big_chicken_dance4.png" type="Texture" id=30]
[ext_resource path="res://big_chicken_dance2.png" type="Texture" id=31]
[ext_resource path="res://big_chicken_dance3.png" type="Texture" id=32]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 29 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 30 ) ],
"loop": true,
"name": "dance",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 21 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 20 ), ExtResource( 19 ) ],
"loop": false,
"name": "death",
"speed": 15.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 13 ) ],
"loop": false,
"name": "grow",
"speed": 10.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[node name="BigMob" type="Area2D" groups=["mobs"]]
script = ExtResource( 9 )
explosion_scene = ExtResource( 28 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -8, 13, -24, 23, -22, 24, -13, 7, 16, -18, 15, -30, -4, -27, -20 )

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = -26.0
margin_top = 25.0
margin_right = 14.0
margin_bottom = 65.0
rect_scale = Vector2( 3, 1 )
max_value = 10.0
value = 10.0
texture_under = ExtResource( 11 )
texture_progress = ExtResource( 10 )

[node name="DamagedSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="GrowSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "dance"

[connection signal="area_entered" from="." to="." method="_on_BigMob_area_entered"]
